force-app/main/default/objects/Product_Plan__c/Product_Plan__c.object-meta.xml
<CustomObject>
    <label>Product Plan</label>
    <nameField>
        <displayFormat>PPN-{00000}</displayFormat>
        <label>Product Plan Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Plans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>