force-app/main/default/objects/Product_Plan__c/fields/Current_Software__c.field-meta.xml
<CustomField>
    <fullName>Current_Software__c</fullName>
    <inlineHelpText>Is software current or should we plan for upgrades?</inlineHelpText>
    <label>Current Software?</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>