force-app/main/default/objects/Product_Plan__c/fields/Customer_Engagement__c.field-meta.xml
<CustomField>
    <fullName>Customer_Engagement__c</fullName>
    <inlineHelpText>Do we have any engagement with customer for additional opportunity?</inlineHelpText>
    <label>Customer Engagement</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>