force-app/main/default/objects/Product_Plan__c/fields/Engagement_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Strategy__c</fullName>
    <inlineHelpText>If unengaged, what is our strategy to engage?  Do we know the right people to progress?</inlineHelpText>
    <label>Engagement Strategy</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>