force-app/main/default/objects/Product_Plan__c/fields/Premium_Support_Upgrade_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Premium_Support_Upgrade_Opportunity__c</fullName>
    <inlineHelpText>Is there an opportunity for a Premium Support upgrade or Training?</inlineHelpText>
    <label>Premium Support Upgrade Opportunity</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>