force-app/main/default/objects/Product_Plan__c/recordTypes/Intapp_Open.recordType-meta.xml
<RecordType>
    <fullName>Intapp_Open</fullName>
    <active>true</active>
    <label>Intapp Open</label>
</RecordType>